# murmur-app

./: .gitignore  .mcp.json  AGENTS.md  AGENT_START.md  CHANGELOG.md  CLAUDE.md  CONTEXT_NEXT_SESSION.md  LICENSE  PROJECT_SUMMARY.md  PROMPT_BUG.md  PROMPT_NEXT_SESSION.md  README.md  THIRD_PARTY_NOTICES.md  TICKETS_UI.md  audio_recorder.py  dictation_bridge.py  eval.py  eval_cpp.py  hotkey_listener.py  llm_cleanup.py  main.py  record_test.py  requirements.txt  text_injector.py  transcriber.py  transcriber_cpp.py  transcriber_deepgram.py
.codex/: config.toml
.cursor/rules/: murmur-pr-test.mdc  murmur-work.mdc
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  omen.yml  release-build.yml  release-rehearsal.yml  release.yml  sidecar-signing-rehearsal.yml
app/: log-viewer.html  overlay.html  package-lock.json  package.json  transform-review.html  vite.config.ts  vitest.config.ts  vitest.setup.ts
app/src/: App.tsx  log-viewer.tsx  styles.css  styles.test.ts  transform-review.tsx
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.dev.conf.json  tauri.macos.conf.json
app/src-tauri/.cargo/: config.toml
app/src-tauri/capabilities/: default.json  log-viewer.json  transform-review.json
app/src-tauri/crates/local-llm-protocol/: Cargo.toml
app/src-tauri/crates/local-llm-protocol/src/: lib.rs
app/src-tauri/eval/fixtures/deterministic/: corpus-v1.json
app/src-tauri/eval/fixtures/hardware/: xlong-whisper-v1.json
app/src-tauri/examples/: murmur-eval.rs  streaming_bench.rs  transcription_bench.rs
app/src-tauri/macos/: Info.plist
app/src-tauri/sidecars/local-llm/: Cargo.toml  Info.plist  build.rs
app/src-tauri/sidecars/local-llm/src/: main.rs
app/src-tauri/src/: alloc.rs  audio.rs  audio_decode.rs  benchmark.rs  cleanup.rs  cli_command.rs  correct_and_teach.rs  correction.rs  diagnostics.rs  dictation_context.rs  evaluation.rs  file_output.rs  frontmost.rs  ide_context.rs  injector.rs  keyboard.rs  lib.rs  llm_sidecar.rs  logging.rs  model_runtime.rs  overlay.rs  partial_transcript.rs  resource_monitor.rs  selection.rs  smart_formatting.rs  state.rs  streaming.rs  telemetry.rs  transcript_transform.rs  transform_apply.rs  transform_diagnostics.rs  transform_flow.rs  transform_presets.rs  transform_trace.rs  vad.rs  vocab.rs  vocabulary_alias.rs  voice_commands.rs
app/src-tauri/src/commands/: benchmark.rs  correct_and_teach.rs  keyboard.rs  knowledge.rs  logging.rs  mod.rs  models.rs  native_window.rs  overlay.rs  performance.rs  permissions.rs  recording.rs  transform_diagnostics.rs  transform_model.rs  transform_popover.rs  tray.rs
app/src-tauri/src/keyboard/: detectors.rs  linux.rs  macos.rs  mod.rs  sys.rs
app/src-tauri/src/knowledge_store/: migrations.rs  mod.rs  repository.rs  types.rs
app/src-tauri/src/performance_metrics/: mod.rs  repository.rs  types.rs
app/src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  unsupported.rs
app/src-tauri/src/transcriber/: chunking.rs  coreml.rs  mod.rs  moonshine.rs  parakeet.rs  preview.rs  whisper.rs
app/src-tauri/tests/: coreml_transcription_integration.rs  headless_benchmark.rs  llm_sidecar_integration.rs  transcription_integration.rs  transform_flow_integration.rs
app/src-tauri/tests/support/: mock_llm_helper.rs
bench/: README.md  make_audio.sh  vocabulary-aliases.json
bench/audio/: disfluent.txt  fast.txt  jargon.txt  long.txt  medium.txt  numbers.txt  short.txt  xlong.txt  xxlong.txt
docs/: AGENT_PROMPTS.md  ARCHITECTURE.md  DEVELOPMENT.md  FEATURES.md  RUST_MIGRATION_PLAN.md  TICKETS_CODERABBIT.md  TICKETS_FEATURES.md  TICKETS_UI.md  bugs.md  install-linux.md  onboarding.md  release.md  research-streaming-transcription.md  research-structured-events.md
docs/archive/: TICKETS_FEATURES_v1.md  streaming-architecture.md
docs/decisions/: 2026-07-20-signed-local-llm-sidecar.md  2026-07-21-secure-release-rehearsal.md  2026-07-22-accelerator-diagnostics-metrics.md  DECISIONS.md
docs/draft/: design-ctx.md  omen-research.md
docs/features/: auto-updater.md  cli-command-formatting.md  correct-and-teach.md  diagnostic-report-comparison.md  evaluation-harness.md  ide-context.md  log-viewer.md  models.md  onboarding-flow.md  overlay.md  per-app-profiles.md  performance-diagnostics.md  performance-lab.md  personal-knowledge-store.md  recording-modes.md  selected-text-transform.md  smart-formatting.md  text-injection.md  transcription.md  vad.md  vocabulary-aliases.md  voice-commands.md
docs/investigations/: 177-audio-ducking.md  benchmark-validation-2026-07-20.md  platform-abstraction.md
docs/reference/: commands.md  events.md  hooks.md  settings.md
docs/sessions/: issue-124-memory-leak.md  issue-38-overlay-widget.md
local/migrations/: MIGR-001-rename-to-murmur.md
prompts/: PROMPT.md  PROMPT_BUG.md  PROMPT_CHAT.md  PROMPT_RELEASE.md  PROMPT_SWARM.md
scripts/: build_local_llm_sidecar.py  finalize_macos_bundle.py  list-mics.sh  notarize_and_repackage_macos.py  probe_local_llm_descriptor.py  probe_macos_sidecar_signing.py  qa-updater.sh  record-test-wav.sh  release_artifacts.py  tail-macos-audio-ducking.sh  validate_workflow_policy.py
scripts/qa/: .gitignore  README.md  audio-duck-check.sh  rms-meter.swift
spikes/354-metal-metrics/: RESULTS.md  metal_metrics_probe.swift
spikes/moonshine-bench/: .gitignore  Cargo.toml  RESULTS.md
tests/: accuracy.py  run_all.py  test_cpp.py  test_deepgram.py  test_openai.py  test_release_artifacts.py  test_workflow_policy.py
tools/murmur-diag/: README.md  run.sh  server.py  test_server.py
ui/: index.html  package-lock.json  package.json  tsc  vite.config.ts
ui/src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
ui/src-tauri/capabilities/: default.json  overlay.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: audio.rs  injector.rs  keyboard.rs  lib.rs  logging.rs  resource_monitor.rs  state.rs  transcriber.rs
ui/src-tauri/src/keyboard/: double_tap.rs  hold_down.rs  listener.rs  mod.rs
ui/src-tauri/src/transcriber/: mod.rs  moonshine.rs  whisper.rs
ui/src-tauri/tests/: transcription_integration.rs
(+217 files in other folders)
