[package]
name = "ui"
version = "0.18.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "ui"

[lib]
name = "ui_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "rt", "fs"] }
base64 = "0.22"
whisper-rs = { version = "0.15", features = ["log_backend"] }
sherpa-onnx = "1.13"
# Parakeet model bundles ship as .tar.bz2 (sherpa-onnx releases); used to extract them.
tar = "0.4"
bzip2 = "0.5"
arboard = "3"
hound = "3.5"
symphonia = { version = "0.5", default-features = false, features = ["wav", "pcm", "mp3", "isomp4", "aac", "alac"] }
dirs = "5"
cpal = "0.15"
rdev = { git = "https://github.com/georgenijo/rdev", rev = "9f510e406327b797eaf2acdc30adcda3dc1e1bb3", features = ["macos_keyboard_only", "macos_no_modifier_event_name", "macos_test_force_tap_timeout"] }
memory-stats = "1"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "fmt"] }
tracing-appender = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
aho-corasick = "1"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.15", features = ["metal"] }
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSScreen", "NSApplication", "NSRunningApplication", "NSWorkspace"] }
objc2-foundation = "0.3"
block2 = "0.6"
core-graphics = "0.25"

[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
fluidaudio-rs = { git = "https://github.com/FluidInference/fluidaudio-rs", rev = "2d1083314104c812944b5150866d1e334db8eed7", default-features = false, features = ["asr"] }

[target.'cfg(target_os = "linux")'.dependencies]
rdev = { git = "https://github.com/georgenijo/rdev", rev = "9f510e406327b797eaf2acdc30adcda3dc1e1bb3", features = ["x11"] }
whisper-rs = { version = "0.15", features = ["cuda"] }

[profile.release]
panic = "abort"
# Parallel codegen without LTO: release CI was dominated by fat LTO + CGU=1
# (cold Linux cargo ~11m). Hot paths are whisper/CUDA/Metal native code, so
# Rust LTO bought little runtime while burning link time. Keep strip off so
# Tauri can still patch the updater bundle-type marker after compilation.
codegen-units = 16
lto = false
opt-level = "s"
strip = false
