[package]
name = "ui"
version = "0.21.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "ui"

[workspace]
members = ["crates/local-llm-protocol", "sidecars/local-llm"]
default-members = ["."]
resolver = "2"

[lib]
name = "ui_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[features]
# Exposes LlmSidecar::for_test + scenario env injection into the local-LLM
# helper. Off by default so the injection path is not linkable in a release
# binary (debug_assertions also enables it for the standard test build).
llm-test-support = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "rt", "fs"] }
base64 = "0.22"
whisper-rs = { version = "0.15", features = ["log_backend"] }
sherpa-onnx = "1.13"
# Parakeet model bundles ship as .tar.bz2 (sherpa-onnx releases); used to extract them.
tar = "0.4"
bzip2 = "0.5"
arboard = "3"
hound = "3.5"
symphonia = { version = "0.5", default-features = false, features = ["wav", "pcm", "mp3", "isomp4", "aac", "alac"] }
dirs = "5"
cpal = "0.15"
rdev = { git = "https://github.com/georgenijo/rdev", rev = "9f510e406327b797eaf2acdc30adcda3dc1e1bb3", features = ["macos_keyboard_only", "macos_no_modifier_event_name", "macos_test_force_tap_timeout"] }
memory-stats = "1"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "fmt"] }
tracing-appender = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
aho-corasick = "1"
libc = "0.2"
rusqlite = { version = "0.40.1", default-features = false, features = ["backup", "bundled"] }
# Local-LLM sidecar supervisor (#312): the app links ONLY the protocol crate,
# never llama-cpp-2. sha2 verifies the pinned transform model before spawn and
# while streaming its download; sysinfo reads the child helper's RSS by pid.
murmur-local-llm-protocol = { path = "crates/local-llm-protocol" }
sha2 = "0.10"
sysinfo = { version = "0.33", default-features = false, features = ["system"] }

# Test-support helper: a protocol-v1 mock of the local-LLM sidecar, driven by
# scenario env vars. It is an example target so `cargo test` builds it for the
# integration suite without exposing it to Tauri's automatic `--bins` bundle.
[[example]]
name = "mock_llm_helper"
path = "tests/support/mock_llm_helper.rs"
test = false

[dev-dependencies]
tempfile = "3"
# Async test harness for the local-LLM supervisor integration tests.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
# "test" feature only -- enables tauri::test::mock_app() for the headless
# benchmark runner (tests/headless_benchmark.rs). Dev-dependency only: does
# not affect release builds.
tauri = { version = "2", features = ["test"] }

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.15", features = ["metal"] }
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSScreen", "NSApplication", "NSRunningApplication", "NSWorkspace", "NSPasteboard", "NSPasteboardItem"] }
objc2-foundation = "0.3"
block2 = "0.6"
core-graphics = "0.25"

[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
fluidaudio-rs = { git = "https://github.com/FluidInference/fluidaudio-rs", rev = "2d1083314104c812944b5150866d1e334db8eed7", default-features = false, features = ["asr"] }

[target.'cfg(target_os = "linux")'.dependencies]
rdev = { git = "https://github.com/georgenijo/rdev", rev = "9f510e406327b797eaf2acdc30adcda3dc1e1bb3", features = ["x11"] }
whisper-rs = { version = "0.15", features = ["cuda"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
# Tauri patches an embedded bundle-type marker after compilation so the updater
# can distinguish deb/AppImage packages. Full stripping removes that marker.
strip = false
