[package]
name = "murmur-llm-sidecar"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
encoding_rs = "0.8"
libc = "0.2"
murmur-local-llm-protocol = { path = "../../crates/local-llm-protocol" }
serde_json = "1"
sha2 = "0.10"

[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
llama-cpp-2 = { version = "=0.1.151", default-features = false, features = ["metal"] }
